...
    val focusRequester = remember {
        FocusRequester()
    }
    var selected by remember {
        mutableIntStateOf(0)
    }
    val selectorFields = listOf("days", "weeks")

    TwoButtonDialog(
        onDismissRequest = onDismissRequest,
        onComplete = {
            try {
                val integer = value.text.toInt()
...
