...
                state.closePeriodInputDialog()
            }
        )
    }

    ModalBottomSheet(
        modifier = modifier.testTag("Add Quest Bottom Sheet"),
        onDismissRequest = state.onDismissRequest
    ) {
        Column {
            Text(text = "New Quest")

            NameFieldRow(
...
            )

            Button(onClick = {
                state.onSave(state.quest)
                state.onDismissRequest()
            }) {
                Text("Save")
            }
        }
    }
}


...
