...
    Scaffold(
        modifier =  modifier.testTag("Homepage Screen"),
        floatingActionButton = {
            FloatingActionButton(
                onClick = state.onClickAddQuest,
                modifier = Modifier
                    .testTag("FAB")
                    .width(64.dp)
                    .height(64.dp)
            ) {
                Icon(Icons.Default.Add, "Add quest button")
            }
        },
...
