...
fun QuestCardStateless(
    modifier: Modifier = Modifier,
    state: QuestCardState,
) {
    ElevatedCard(
        modifier = modifier
            .testTag("Quest Card"),
        onClick = {
            state.onClick(state.quest.id)
        },
    ) {
        Row(
            horizontalArrangement = Arrangement.SpaceBetween,
...
